// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toucan captureException Error with cause 1`] = `
{
  "contexts": ObjectContaining {
    "trace": ObjectContaining {
      "span_id": Any<String>,
      "trace_id": Any<String>,
    },
  },
  "environment": "production",
  "event_id": Any<String>,
  "exception": ObjectContaining {
    "values": ArrayContaining [
      ObjectContaining {
        "stacktrace": ObjectContaining {
          "frames": ArrayContaining [
            ObjectContaining {
              "abs_path": Any<String>,
              "colno": Any<Number>,
              "filename": Any<String>,
              "function": Any<String>,
              "in_app": Any<Boolean>,
              "lineno": Any<Number>,
              "module": Any<String>,
            },
          ],
        },
        "type": "Error",
        "value": "original error",
      },
      ObjectContaining {
        "mechanism": ObjectContaining {
          "handled": true,
          "type": "generic",
        },
        "stacktrace": ObjectContaining {
          "frames": ArrayContaining [
            ObjectContaining {
              "abs_path": Any<String>,
              "colno": Any<Number>,
              "filename": Any<String>,
              "function": Any<String>,
              "in_app": Any<Boolean>,
              "lineno": Any<Number>,
              "module": Any<String>,
            },
          ],
        },
        "type": "Error",
        "value": "outer error with cause",
      },
    ],
  },
  "platform": "javascript",
  "sdk": ObjectContaining {
    "integrations": [
      "RequestData",
      "LinkedErrors",
    ],
    "name": "toucan-js",
    "packages": ArrayContaining [
      ObjectContaining {
        "name": "npm:toucan-js",
        "version": Any<String>,
      },
    ],
    "version": Any<String>,
  },
  "timestamp": Any<Number>,
}
`;

exports[`Toucan captureException captureException: primitive 1`] = `
{
  "contexts": ObjectContaining {
    "trace": ObjectContaining {
      "span_id": Any<String>,
      "trace_id": Any<String>,
    },
  },
  "environment": "production",
  "event_id": Any<String>,
  "exception": ObjectContaining {
    "values": ArrayContaining [
      ObjectContaining {
        "mechanism": ObjectContaining {
          "handled": true,
          "synthetic": true,
          "type": "generic",
        },
        "stacktrace": ObjectContaining {
          "frames": ArrayContaining [
            ObjectContaining {
              "abs_path": Any<String>,
              "colno": Any<Number>,
              "filename": Any<String>,
              "function": Any<String>,
              "in_app": Any<Boolean>,
              "lineno": Any<Number>,
              "module": Any<String>,
            },
          ],
        },
        "type": "Error",
        "value": "test",
      },
    ],
  },
  "platform": "javascript",
  "sdk": ObjectContaining {
    "integrations": [
      "RequestData",
      "LinkedErrors",
    ],
    "name": "toucan-js",
    "packages": ArrayContaining [
      ObjectContaining {
        "name": "npm:toucan-js",
        "version": Any<String>,
      },
    ],
    "version": Any<String>,
  },
  "timestamp": Any<Number>,
}
`;

exports[`Toucan captureException captureException: primitive 2`] = `
{
  "contexts": ObjectContaining {
    "trace": ObjectContaining {
      "span_id": Any<String>,
      "trace_id": Any<String>,
    },
  },
  "environment": "production",
  "event_id": Any<String>,
  "exception": ObjectContaining {
    "values": ArrayContaining [
      ObjectContaining {
        "mechanism": ObjectContaining {
          "handled": true,
          "synthetic": true,
          "type": "generic",
        },
        "stacktrace": ObjectContaining {
          "frames": ArrayContaining [
            ObjectContaining {
              "abs_path": Any<String>,
              "colno": Any<Number>,
              "filename": Any<String>,
              "function": Any<String>,
              "in_app": Any<Boolean>,
              "lineno": Any<Number>,
              "module": Any<String>,
            },
          ],
        },
        "type": "Error",
        "value": true,
      },
    ],
  },
  "platform": "javascript",
  "sdk": ObjectContaining {
    "integrations": [
      "RequestData",
      "LinkedErrors",
    ],
    "name": "toucan-js",
    "packages": ArrayContaining [
      ObjectContaining {
        "name": "npm:toucan-js",
        "version": Any<String>,
      },
    ],
    "version": Any<String>,
  },
  "timestamp": Any<Number>,
}
`;

exports[`Toucan captureException captureException: primitive 3`] = `
{
  "contexts": ObjectContaining {
    "trace": ObjectContaining {
      "span_id": Any<String>,
      "trace_id": Any<String>,
    },
  },
  "environment": "production",
  "event_id": Any<String>,
  "exception": ObjectContaining {
    "values": ArrayContaining [
      ObjectContaining {
        "mechanism": ObjectContaining {
          "handled": true,
          "synthetic": true,
          "type": "generic",
        },
        "stacktrace": ObjectContaining {
          "frames": ArrayContaining [
            ObjectContaining {
              "abs_path": Any<String>,
              "colno": Any<Number>,
              "filename": Any<String>,
              "function": Any<String>,
              "in_app": Any<Boolean>,
              "lineno": Any<Number>,
              "module": Any<String>,
            },
          ],
        },
        "type": "Error",
        "value": 10,
      },
    ],
  },
  "platform": "javascript",
  "sdk": ObjectContaining {
    "integrations": [
      "RequestData",
      "LinkedErrors",
    ],
    "name": "toucan-js",
    "packages": ArrayContaining [
      ObjectContaining {
        "name": "npm:toucan-js",
        "version": Any<String>,
      },
    ],
    "version": Any<String>,
  },
  "timestamp": Any<Number>,
}
`;

exports[`Toucan captureException object 1`] = `
{
  "contexts": ObjectContaining {
    "trace": ObjectContaining {
      "span_id": Any<String>,
      "trace_id": Any<String>,
    },
  },
  "environment": "production",
  "event_id": Any<String>,
  "exception": ObjectContaining {
    "values": ArrayContaining [
      ObjectContaining {
        "mechanism": ObjectContaining {
          "handled": true,
          "synthetic": true,
          "type": "generic",
        },
        "stacktrace": ObjectContaining {
          "frames": ArrayContaining [
            ObjectContaining {
              "abs_path": Any<String>,
              "colno": Any<Number>,
              "filename": Any<String>,
              "function": Any<String>,
              "in_app": Any<Boolean>,
              "lineno": Any<Number>,
              "module": Any<String>,
            },
          ],
        },
        "type": "Error",
        "value": "Non-Error exception captured with keys: bar, foo",
      },
    ],
  },
  "extra": {
    "__serialized__": {
      "bar": "baz",
      "foo": "test",
    },
  },
  "platform": "javascript",
  "sdk": ObjectContaining {
    "integrations": [
      "RequestData",
      "LinkedErrors",
    ],
    "name": "toucan-js",
    "packages": ArrayContaining [
      ObjectContaining {
        "name": "npm:toucan-js",
        "version": Any<String>,
      },
    ],
    "version": Any<String>,
  },
  "timestamp": Any<Number>,
}
`;

exports[`Toucan captureException runtime thrown Error 1`] = `
{
  "contexts": ObjectContaining {
    "trace": ObjectContaining {
      "span_id": Any<String>,
      "trace_id": Any<String>,
    },
  },
  "environment": "production",
  "event_id": Any<String>,
  "exception": ObjectContaining {
    "values": ArrayContaining [
      ObjectContaining {
        "mechanism": ObjectContaining {
          "handled": true,
          "type": "generic",
        },
        "stacktrace": ObjectContaining {
          "frames": ArrayContaining [
            ObjectContaining {
              "abs_path": Any<String>,
              "colno": Any<Number>,
              "filename": Any<String>,
              "function": Any<String>,
              "in_app": Any<Boolean>,
              "lineno": Any<Number>,
              "module": Any<String>,
            },
          ],
        },
        "type": "SyntaxError",
        "value": "Unexpected token a in JSON at position 0",
      },
    ],
  },
  "platform": "javascript",
  "sdk": ObjectContaining {
    "integrations": [
      "RequestData",
      "LinkedErrors",
    ],
    "name": "toucan-js",
    "packages": ArrayContaining [
      ObjectContaining {
        "name": "npm:toucan-js",
        "version": Any<String>,
      },
    ],
    "version": Any<String>,
  },
  "timestamp": Any<Number>,
}
`;

exports[`Toucan captureMessage sends correct body to Sentry 1`] = `
{
  "result": ArrayContaining [
    ObjectContaining {
      "event_id": Any<String>,
      "sdk": ObjectContaining {
        "name": "toucan-js",
        "version": Any<String>,
      },
      "sent_at": Any<String>,
    },
    ObjectContaining {
      "type": "event",
    },
    ObjectContaining {
      "contexts": ObjectContaining {
        "trace": ObjectContaining {
          "span_id": Any<String>,
          "trace_id": Any<String>,
        },
      },
      "event_id": Any<String>,
      "sdk": ObjectContaining {
        "integrations": [
          "RequestData",
          "LinkedErrors",
        ],
        "name": "toucan-js",
        "packages": ArrayContaining [
          ObjectContaining {
            "name": "npm:toucan-js",
            "version": Any<String>,
          },
        ],
        "version": Any<String>,
      },
      "timestamp": Any<Number>,
    },
  ],
}
`;

exports[`Toucan general invalid URL does not fail 1`] = `
{
  "contexts": ObjectContaining {
    "trace": ObjectContaining {
      "span_id": Any<String>,
      "trace_id": Any<String>,
    },
  },
  "environment": "production",
  "event_id": Any<String>,
  "level": "info",
  "message": "test",
  "platform": "javascript",
  "sdk": ObjectContaining {
    "integrations": [
      "RequestData",
      "LinkedErrors",
    ],
    "name": "toucan-js",
    "packages": ArrayContaining [
      ObjectContaining {
        "name": "npm:toucan-js",
        "version": Any<String>,
      },
    ],
    "version": Any<String>,
  },
  "timestamp": Any<Number>,
}
`;

exports[`Toucan stacktraces attachStacktrace = true sends stacktrace with captureMessage 1`] = `
{
  "contexts": ObjectContaining {
    "trace": ObjectContaining {
      "span_id": Any<String>,
      "trace_id": Any<String>,
    },
  },
  "environment": "production",
  "event_id": Any<String>,
  "exception": ObjectContaining {
    "values": ArrayContaining [
      ObjectContaining {
        "stacktrace": ObjectContaining {
          "frames": ArrayContaining [
            ObjectContaining {
              "abs_path": Any<String>,
              "colno": Any<Number>,
              "filename": Any<String>,
              "function": Any<String>,
              "in_app": Any<Boolean>,
              "lineno": Any<Number>,
              "module": Any<String>,
            },
          ],
        },
        "value": "message with stacktrace",
      },
    ],
  },
  "level": "info",
  "message": "message with stacktrace",
  "platform": "javascript",
  "sdk": ObjectContaining {
    "integrations": [
      "RequestData",
      "LinkedErrors",
    ],
    "name": "toucan-js",
    "packages": ArrayContaining [
      ObjectContaining {
        "name": "npm:toucan-js",
        "version": Any<String>,
      },
    ],
    "version": Any<String>,
  },
  "timestamp": Any<Number>,
}
`;
